# BaiZeNotesByQt

./: .gitignore  CMakeLists.txt  README.md  main.cpp
cmake/: FindQtI18n.cmake
res/: resource.qrc  resources.qrc
res/qml/: HelloQml.qml
res/translations/: app_zh_CN.xml
res/uic/: MainWindow.ui
resources/: resource.qrc
resources/main_menu/: coding.xml  custom_tools.xml  edit.xml  file.xml  help.xml  insert.xml  links.xml  model.xml  online.xml  plugins.xml  settings.xml  tools.xml  view.xml
resources/style/: default_black.css  default_black.qss
src/: ui_main.h
src/common/: common.h  common_base.h  const_def.h  const_menu.cpp  const_menu.h  error.h
src/common/hemy_color/: hemy_color.cpp  hemy_color.h
src/common/hemy_font/: hemy_font.cpp  hemy_font.h
src/common_api/: common_api.h
src/common_api/file/: file_proc.cpp  file_proc.h
src/common_api/log/: hemy_debug.cpp  hemy_debug.h
src/log/: hemy_debug.cpp  hemy_debug.h
src/mainwindow/: central_widgets.cpp  central_widgets.h  hmain_window.cpp  hmain_window.h
src/mainwindow/main_layout/: content_widget.cpp  content_widget.h  editor_menu_widget.cpp  editor_menu_widget.h  editor_widget.cpp  editor_widget.h  explorer_widget.cpp  explorer_widget.h  main_spitter.cpp  main_spitter.h
src/mainwindow/menubar/: h_menu_bar.cpp  h_menu_bar.h  menu_bar.cpp
src/mainwindow/menubar/base/: menu_base.cpp  menu_base.h
src/mainwindow/menubar/hemy_menu/: hemy_menu.h  menu_coding.cpp  menu_custom.cpp  menu_edit.cpp  menu_file.cpp  menu_help.cpp  menu_insert.cpp  menu_links.cpp  menu_model.cpp  menu_online_tools.cpp  menu_plugin.cpp  menu_setting.cpp  menu_tools.cpp  menu_view.cpp
src/mainwindow/menubar/m_coding/: coding_convert.cpp  coding_convert.h  coding_open.cpp  coding_open.h  h_menu_coding.cpp  h_menu_coding.h
src/mainwindow/menubar/m_edit/: h_menu_edit.cpp  h_menu_edit.h
src/mainwindow/menubar/m_file/: file_export_to.cpp  file_export_to.h  file_import_from.cpp  file_import_from.h  h_menu_file.cpp  h_menu_file.h
src/mainwindow/menubar/m_help/: h_menu_help.cpp  h_menu_help.h
src/mainwindow/menubar/m_insert/: h_menu_insert.cpp  h_menu_insert.h
src/mainwindow/menubar/m_links/: h_menu_links.cpp  h_menu_links.h
src/mainwindow/menubar/m_online/: h_menu_online_tools.cpp  h_menu_online_tools.h
src/mainwindow/menubar/m_plugins/: h_menu_plugins.cpp  h_menu_plugins.h
src/mainwindow/menubar/m_settings/: h_menu_setting.cpp  h_menu_setting.h
src/mainwindow/menubar/m_tools/: h_menu_tools.cpp  h_menu_tools.h
src/mainwindow/menubar/m_view/: h_menu_view.cpp  h_menu_view.h  view_expand.cpp  view_expand.h  view_fold.cpp  view_fold.h
src/mainwindow/status_bar/: h_status_bar.cpp  h_status_bar.h
src/mainwindow/window_widget/: content_widget.cpp  content_widget.h  editor_line_no.cpp  editor_line_no.h  editor_menu_widget.cpp  editor_menu_widget.h  editor_widget.cpp  editor_widget.h  explorer_widget.cpp  explorer_widget.h  main_spitter.cpp  main_spitter.h  preview_widget.cpp  preview_widget.h  sidebar_widget.cpp  sidebar_widget.h
src/menubar/: menu_bar.cpp  menu_bar.h
src/menubar/base/: menu_base.cpp  menu_base.h
src/menubar/hemy_menu/: hemy_menu.h  menu_custom.cpp  menu_help.cpp  menu_links.cpp  menu_online_tools.cpp
src/menubar/menu_coding/: menu_coding.cpp  menu_coding.h
src/menubar/menu_edit/: menu_edit.cpp  menu_edit.h
src/menubar/menu_file/: menu_file.cpp  menu_file.h
src/menubar/menu_help/: menu_help.cpp  menu_help.h
src/menubar/menu_insert/: menu_insert.cpp  menu_insert.h
src/menubar/menu_model/: menu_model.cpp  menu_model.h
src/menubar/menu_plugins/: menu_plugin.cpp  menu_plugin.h
src/menubar/menu_setting/: menu_setting.cpp  menu_setting.h
src/menubar/menu_tools/: menu_tools.cpp  menu_tools.h
src/menubar/menu_view/: menu_view.cpp  menu_view.h
src/navigation/: navigation.cpp  navigation.h
src/process/render/: latex_render.cpp  latex_render.h  math_jax.cpp  math_jax.h  render.cpp  render.h
src/status_bar/: status_bar.cpp
src/style_def/: default.h  hemy_style.h  qt_style.h
src/windows/: hmain_window.cpp  hmain_window.h
src/windows/central/: window_central.cpp  window_central.h
src/windows/central/explorer/: explorer_widget.cpp  explorer_widget.h
src/windows/central/sidebar/: sidebar_widget.cpp  sidebar_widget.h
src/windows/central/workbench/: workbench.cpp  workbench.h
src/windows/central/workbench/editor/: editor_line_no.cpp  editor_line_no.h  workbench_editor.cpp  workbench_editor.h
src/windows/central/workbench/editor_menu/: workbench_menu.cpp  workbench_menu.h
src/windows/central/workbench/preview/: workbench_preview.cpp  workbench_preview.h
src/windows/dialogs/: dialog_file.cpp  dialog_file.h
src/windows/gui_comm/: gui_comm_def.cpp  gui_comm_def.h  gui_style_com.cpp  gui_style_com.h
src/windows/menubar/: menu_bar.cpp  menu_bar.h
src/windows/menubar/base/: menu_base.cpp  menu_base.h
src/windows/menubar/hemy_menu/: hemy_menu.h  menu_custom.cpp  menu_links.cpp  menu_online_tools.cpp
src/windows/menubar/menu_coding/: menu_coding.cpp  menu_coding.h
src/windows/menubar/menu_edit/: menu_edit.cpp  menu_edit.h
src/windows/menubar/menu_file/: menu_file.cpp  menu_file.h
src/windows/menubar/menu_help/: menu_help.cpp  menu_help.h
src/windows/menubar/menu_insert/: menu_insert.cpp  menu_insert.h  special_font_dialog.cpp  special_font_dialog.h
src/windows/menubar/menu_model/: menu_model.cpp  menu_model.h
src/windows/menubar/menu_plugins/: menu_plugin.cpp  menu_plugin.h
src/windows/menubar/menu_setting/: menu_setting.cpp  menu_setting.h
src/windows/menubar/menu_tools/: menu_tools.cpp  menu_tools.h
src/windows/menubar/menu_view/: menu_view.cpp  menu_view.h
src/windows/status_bar/: status_bar.cpp  status_bar.h
